--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,6 +1,11 @@
 server.port = 8099
 
 # Database
-spring.datasource.url = jdbc:mysql://localhost:3306/inventorymotor
+spring.datasource.url = jdbc:mysql://localhost:3306/inventory
 spring.datasource.username = root
 spring.datasource.password = root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+logging.level.org.springframework.security.web.*=debug
