--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -8,4 +8,8 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 logging.level.org.springframework.security.web.*=debug
