--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=backend
 spring.profiles.active = dev
 server.servlet.context-path = /inventory/api
 
+spring.web.resources.static-locations=file:/C:/inventory-motor/backend/src/main/resources/static/
+
 
